--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Build\Assets\Materials\box.mtrl" />
+    <None Include="..\Build\Assets\Scenes\basic.scn" />
     <None Include="..\Build\Assets\Shaders\basic.frag" />
     <None Include="..\Build\Assets\Shaders\basic.prog" />
     <None Include="..\Build\Assets\Shaders\basic.vert" />
@@ -151,4 +152,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties _1_1_4Build_4Assets_4Scenes_4basic_1scn__JsonSchema="https://docs.strmprivacy.io/jsonschema/BatchJob.json" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
