--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -144,6 +144,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Build\Assets\Materials\box.mtrl" />
+    <None Include="..\Build\Assets\Materials\cow.mtrl" />
+    <None Include="..\Build\Assets\Materials\dragon_.mtrl" />
+    <None Include="..\Build\Assets\Materials\island.mtrl" />
+    <None Include="..\Build\Assets\Materials\knight_.mtrl" />
     <None Include="..\Build\Assets\Materials\ogre.mtrl" />
     <None Include="..\Build\Assets\Scenes\basic.scn" />
     <None Include="..\Build\Assets\Scenes\basic_lit.scn" />
