--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -162,16 +162,19 @@
     <None Include="..\Build\Assets\Shaders\basic_phong.frag" />
     <None Include="..\Build\Assets\Shaders\basic_phong.prog" />
     <None Include="..\Build\Assets\Shaders\basic_phong.vert" />
-    <None Include="..\Build\Assets\Shaders\basic_phong_texture.frag" />
-    <None Include="..\Build\Assets\Shaders\basic_phong_texture.prog" />
-    <None Include="..\Build\Assets\Shaders\basic_phong_texture.vert" />
+    <None Include="..\Build\Assets\Shaders\normal_phong.frag" />
+    <None Include="..\Build\Assets\Shaders\normal_phong.prog" />
+    <None Include="..\Build\Assets\Shaders\normal_phong.vert" />
+    <None Include="..\Build\Assets\Shaders\texture_phong.frag" />
+    <None Include="..\Build\Assets\Shaders\texture_phong.prog" />
+    <None Include="..\Build\Assets\Shaders\texture_phong.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties _1_1_4Build_4Assets_4Materials_4multi_1mtrl__JsonSchema="https://download.stackhawk.com/hawk/jsonschema/hawkconfig.json" _1_1_4Build_4Assets_4Scenes_4basic_1scn__JsonSchema="https://docs.strmprivacy.io/jsonschema/BatchJob.json" _1_1_4Build_4Assets_4Scenes_4texture_1scn__JsonSchema="https://appsemble.app/api.json" />
+      <UserProperties _1_1_4Build_4Assets_4Materials_4multi_1mtrl__JsonSchema="https://download.stackhawk.com/hawk/jsonschema/hawkconfig.json" _1_1_4Build_4Assets_4Scenes_4basic_1scn__JsonSchema="https://docs.strmprivacy.io/jsonschema/BatchJob.json" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
