--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -146,13 +146,21 @@
     <None Include="..\Build\Assets\Materials\banana.mtrl" />
     <None Include="..\Build\Assets\Materials\box.mtrl" />
     <None Include="..\Build\Assets\Materials\cow.mtrl" />
+    <None Include="..\Build\Assets\Materials\postprocess.mtrl" />
+    <None Include="..\Build\Assets\Materials\rtt.mtrl" />
     <None Include="..\Build\Assets\Materials\dragon_.mtrl" />
     <None Include="..\Build\Assets\Materials\island.mtrl" />
     <None Include="..\Build\Assets\Materials\knight_.mtrl" />
     <None Include="..\Build\Assets\Materials\multi.mtrl" />
     <None Include="..\Build\Assets\Materials\ogre.mtrl" />
+    <None Include="..\Build\Assets\Materials\reflection.mtrl" />
+    <None Include="..\Build\Assets\Materials\refraction.mtrl" />
+    <None Include="..\Build\Assets\Materials\skybox.mtrl" />
     <None Include="..\Build\Assets\Scenes\basic.scn" />
     <None Include="..\Build\Assets\Scenes\basic_lit.scn" />
+    <None Include="..\Build\Assets\Scenes\Cubemap.scn" />
+    <None Include="..\Build\Assets\Scenes\postprocess.scn" />
+    <None Include="..\Build\Assets\Scenes\rtt.scn" />
     <None Include="..\Build\Assets\Scenes\test.scn" />
     <None Include="..\Build\Assets\Scenes\texture.scn" />
     <None Include="..\Build\Assets\Shaders\basic.frag" />
@@ -164,6 +172,16 @@
     <None Include="..\Build\Assets\Shaders\basic_phong.frag" />
     <None Include="..\Build\Assets\Shaders\basic_phong.prog" />
     <None Include="..\Build\Assets\Shaders\basic_phong.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\reflection.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction.vert" />
+    <None Include="..\Build\Assets\Shaders\FX\refraction_reflection.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\skybox.frag" />
+    <None Include="..\Build\Assets\Shaders\FX\skybox.prog" />
+    <None Include="..\Build\Assets\Shaders\FX\skybox.vert" />
     <None Include="..\Build\Assets\Shaders\FX\toon.frag" />
     <None Include="..\Build\Assets\Shaders\FX\toon.prog" />
     <None Include="..\Build\Assets\Shaders\FX\toon.vert" />
@@ -173,6 +191,9 @@
     <None Include="..\Build\Assets\Shaders\Lit\texture_normal.frag" />
     <None Include="..\Build\Assets\Shaders\Lit\texture_normal.prog" />
     <None Include="..\Build\Assets\Shaders\Lit\texture_normal.vert" />
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.frag" />
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.prog" />
+    <None Include="..\Build\Assets\Shaders\PostProcess\postprocess.vert" />
     <None Include="..\Build\Assets\Shaders\Unlit\color.frag" />
     <None Include="..\Build\Assets\Shaders\Unlit\color.prog" />
     <None Include="..\Build\Assets\Shaders\Unlit\color.vert" />
