--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -217,7 +217,9 @@
     <ClCompile Include="Math\Vector2.cpp" />
     <ClCompile Include="Physics\ContactListener.cpp" />
     <ClCompile Include="Physics\PhysicsSystem.cpp" />
+    <ClCompile Include="Renderer\Cubemap.cpp" />
     <ClCompile Include="Renderer\Font.cpp" />
+    <ClCompile Include="Renderer\Framebuffer.cpp" />
     <ClCompile Include="Renderer\GUI.cpp" />
     <ClCompile Include="Renderer\Material.cpp" />
     <ClCompile Include="Renderer\Model.cpp" />
@@ -286,7 +288,9 @@
     <ClInclude Include="Physics\Collision.h" />
     <ClInclude Include="Physics\ContactListener.h" />
     <ClInclude Include="Physics\PhysicsSystem.h" />
+    <ClInclude Include="Renderer\Cubemap.h" />
     <ClInclude Include="Renderer\Font.h" />
+    <ClInclude Include="Renderer\Framebuffer.h" />
     <ClInclude Include="Renderer\GUI.h" />
     <ClInclude Include="Renderer\Material.h" />
     <ClInclude Include="Renderer\Model.h" />
