--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -145,7 +145,12 @@
   <ItemGroup>
     <None Include="..\Build\Assets\Materials\banana.mtrl" />
     <None Include="..\Build\Assets\Materials\box.mtrl" />
+    <None Include="..\Build\Assets\Materials\cactus.mtrl" />
     <None Include="..\Build\Assets\Materials\cow.mtrl" />
+    <None Include="..\Build\Assets\Materials\elephant.mtrl" />
+    <None Include="..\Build\Assets\Materials\gazebo.mtrl" />
+    <None Include="..\Build\Assets\Materials\giraffe.mtrl" />
+    <None Include="..\Build\Assets\Materials\palmTree.mtrl" />
     <None Include="..\Build\Assets\Materials\postprocess.mtrl" />
     <None Include="..\Build\Assets\Materials\dragon_.mtrl" />
     <None Include="..\Build\Assets\Materials\island.mtrl" />
@@ -154,11 +159,15 @@
     <None Include="..\Build\Assets\Materials\ogre.mtrl" />
     <None Include="..\Build\Assets\Materials\reflection.mtrl" />
     <None Include="..\Build\Assets\Materials\refraction.mtrl" />
+    <None Include="..\Build\Assets\Materials\lion.mtrl" />
+    <None Include="..\Build\Assets\Materials\robin.mtrl" />
     <None Include="..\Build\Assets\Materials\rtt.mtrl" />
     <None Include="..\Build\Assets\Materials\skybox.mtrl" />
+    <None Include="..\Build\Assets\Materials\tiger.mtrl" />
     <None Include="..\Build\Assets\Scenes\basic.scn" />
     <None Include="..\Build\Assets\Scenes\basic_lit.scn" />
     <None Include="..\Build\Assets\Scenes\Cubemap.scn" />
+    <None Include="..\Build\Assets\Scenes\final.scn" />
     <None Include="..\Build\Assets\Scenes\postprocess.scn" />
     <None Include="..\Build\Assets\Scenes\rtt.scn" />
     <None Include="..\Build\Assets\Scenes\test.scn" />
